# cscript

./: .gitignore  CMakeLists.txt  tags
reference/: c.bnf  c.dot  dot.py
src/: cscript.c  cscript.h  lexer.h  main.c  prompt.c  prompt.h  state.h
